fix size of objects on mobile site

--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,11 @@
   overflow: auto;
 }
 
-.gradient-bg {
+.bg-streamify-gradient {
   background-image: linear-gradient(45deg, #260046, #7400DC);
   background-attachment: fixed;
-  overflow: auto;
 }
 
-.flexbox-row {
-  display: flex;
-  flex-direction: row;
-  gap: 30px;
-}
-
-.flexbox-column {
-  display: flex;
-  flex-direction: column;
+.w-min-320 {
+  min-width: 320px;
 }
